test/scenarios/network/configmap.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: scenario-network
data:
  setting: first
