test/scenarios/network/deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: scenario-network
spec:
  podSelector:
    matchLabels: {vm.roamvm.io/name: scenario-network}
  policyTypes: [Ingress]
