test/scenarios/network/pending.yaml
apiVersion: vm.roamvm.io/v1alpha1
kind: VirtualMachine
metadata:
  name: scenario-network-pending
spec:
  nodeSelector:
    roamvm.test/nonexistent: "true"
