test/scenarios/network/pvc.yaml
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: scenario-network
spec:
  accessModes: [ReadWriteOnce]
  resources:
    requests:
      storage: 256Mi
