test/scenarios/network/restored.yaml
apiVersion: vm.roamvm.io/v1alpha1
kind: VirtualMachine
metadata:
  name: scenario-network-restored
spec:
  powerState: Stopped
